# rust-dl-from-scratch

./: Cargo.toml  PROJECT_STATUS.md  README.md  VISUALIZATION_GUIDE.md
benches/: activation_benchmark.rs  loss_benchmark.rs  network_benchmark.rs
docs/: MNIST_GUIDE.md  activation_benchmark_results.md  activation_improvements.md  benchmark_results.md  chapter01.md  ndarray_migration_summary.md  network_benchmark_results.md
examples/: README.md  all_plots.rs  mnist_example.rs  plot_activation_functions.rs  plot_data_visualization.rs  plot_gradient_descent.rs  plot_loss_surface.rs  plot_training_loss.rs  simple_mnist.rs
src/: lib.rs  main.rs
src/chapter01/: cli.rs  mod.rs  perceptron.rs
src/chapter02/: activation.rs  grad.rs  loss.rs  matrix.rs  mod.rs  network.rs  train_simple.rs
src/datasets/: mnist.rs  mod.rs
src/utils/: math.rs
